--- a/pom.xml
+++ b/pom.xml
@@ -60,11 +60,21 @@
       <version>1.3.2</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/javax.jmdns/jmdns -->
+    <!-- https://mvnrepository.com/artifact/org.jmdns/jmdns -->
     <dependency>
-      <groupId>javax.jmdns</groupId>
+      <groupId>org.jmdns</groupId>
       <artifactId>jmdns</artifactId>
-      <version>3.4.1</version>
+      <version>3.5.8</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.7</version>
     </dependency>
 
   </dependencies>
